# mypyqq

./: WelearnCurriculumFinsh.py  main.py  pyproject.toml
modules/: _啥也别说.py  replyFriendd.py  replyGroup.py  schedule.py
testmodules/: reply.py  test01.py  test02.py  test03.py  timeschedule.py
